<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/shape_5dp_light"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/popup_download"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/popup_download"
            android:textColor="@color/color_text_dark"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <RelativeLayout
        android:id="@+id/popup_rename"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/popup_rename"
            android:textColor="@color/color_text_dark"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd" />

    <RelativeLayout
        android:id="@+id/popup_move"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/popup_move"
            android:textColor="@color/color_text_dark"
            android:textSize="15sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dddddd"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/popup_delete"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/popup_delete"
            android:textColor="@color/color_text_dark"
            android:textSize="15sp" />

    </RelativeLayout>
</LinearLayout>